  which allows transparent decryption of encrypted property values.
- Moved org.jasypt.hibernate.ParameterNaming to 
  org.jasypt.hibernate.type.ParameterNaming.
- Added org.jasypt.hibernate.connectionprovider.EncryptedPasswordDriverManagerConnectionProvider
  for allowing encrypted database passwords to be set in hibernate.cfg.xml 
  files.


1.3.1
=======
- Solved configuration bug in "StandardPBEByteEncryptor.initialize()" for 
  algorithms coming from *Config objects.


1.3
=======

- DigesterConfig and PBEConfig are not Serializable anymore.
- Added provider and providerName properties to DigesterConfig and
  SimpleDigesterConfig classes.
- Added providerClassName, providerName and saltGeneratorClassName
  configuration at EnvironmentDigesterConfig.
- StandardByteDigester, StandardStringDigester, Digester, 
  and ConfigurablePasswordEncryptor can now specify the JCE security provider
  (<tt>java.security.Provider</tt> implementation) which will be asked
  for the digest algorithm.
- Added provider and providerName properties to PBEConfig and
  SimplePBEConfig classes.
- Added providerClassName, providerName and saltGeneratorClassName
  configuration at EnvironmentPBEConfig.
- StandardPBEByteEncryptor, StandardPBEStringEncryptor, 
  StandardPBEBigIntegerEncryptor and StandardPBEBigDecimalEncryptor can now 
  specify the JCE security provider (<tt>java.security.Provider</tt> 
  implementation) which will be asked for the digest algorithm.
- Created new StringDigesterConfig configuration interface for digesters,
  which extends DigesterConfig and adds parameters "unicodeNormalizationIgnored"
  and "stringOutputType". Also created new implementations 
  SimpleStringDigesterConfig and EnvironmentStringDigesterConfig.
- Added Unicode Normalization step to StandardStringDigester, and also
  capabilities to return hexadecimal-encoded digest Strings instead of only
  BASE64 ones.
- Created new StringPBEConfig configuration interface for encryptors,